--- a/public/default.css
+++ b/public/default.css
@@ -8,6 +8,12 @@
 * Copyright 2011-2017 The Bootstrap Authors 
 * Copyright 2011-2017 Twitter, Inc. 
 * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)*/
+
+@media (max-width: 767px) {
+  .color-switcher {
+    display: none; /* Oculta el elemento */
+  }
+}
 :root {
   --blue: #2979ff;
   --indigo: #3d5afe;
